--- a/iss-location-ingestor.csproj
+++ b/iss-location-ingestor.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dotnet-iss_location_ingestor-E642378E-A5CD-4B18-9CFA-316F0852A02F</UserSecretsId>
     <RootNamespace>iss_location_ingestor</RootNamespace>
   </PropertyGroup>
 
@@ -17,5 +16,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="One_Sgp4" Version="1.0.13" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 </Project>
