--- a/iss-location-ingestor.csproj
+++ b/iss-location-ingestor.csproj
@@ -17,5 +17,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="One_Sgp4" Version="1.0.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
   </ItemGroup>
 </Project>
